deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: exp-dev
  name: exp-dev-svc
spec:
  ports:
    - port: 6621
      protocol: TCP
      targetPort: 80
  selector:
    app: exp-dev
